[tool.poetry]
name = "uptime-robot"
version = "0.1.0"
description = ""
authors = ["whycookierocket <p.allen.mayhew@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.10.4"
aiohttp = "^3.11.11"
sqlalchemy = "^2.0.36"
pymongo = "4.9.0"
motor = "3.6.0"
aiomysql = "^0.2.0"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
gunicorn = "^23.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
